--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,20 @@ repositories {
     mavenCentral()
 }
 
+
+
+def dependencyList = [
+        "java-common",
+        "java-console-table",
+]
+
+
 dependencies {
-    compile project(':java-common')
-    compile project(':java-console-table')
+    dependencyList.each {
+        if (findProject(":" + it)){
+            compile project(":" + it)
+        }
+    }
     compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
